--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,15 @@ body {
   background-color: #F5F7FB;
 }
 
+main {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 /** TYPOGRAPHY **/
 
 /* bold font for title and questions Karla, other Inter*/
